--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "connect-mongodb-session": "^2.3.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "mongoose": "^5.9.9"
+    "mongoose": "^5.9.9",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "colors": "^1.4.0"
